CORE-42387: Fixed sidebar menu layout alignment in VS when aura is enabled.

--- a/docroot/themes/custom/transac/alshaya_victoria_secret/sass/components/header/_responsive-menu.scss
+++ b/docroot/themes/custom/transac/alshaya_victoria_secret/sass/components/header/_responsive-menu.scss
@@ -289,20 +289,6 @@ header {
   }
 }
 
-.toggle--sign {
-  .shop,
-  .account {
-    @include breakpoint($only-tablet) {
-      html[lang=ar] & {
-        padding: 0 0.25rem;
-        display: inline-flex;
-        align-items: center;
-        justify-content: center;
-      }
-    }
-  }
-}
-
 .logged-in {
   .toggle--sign {
     .account {
